src/objects/accounting_feature__c.object
<CustomObject>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>feature_type__c</fullName>
        <label>feature_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_Feature</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting_feature</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>